--- a/src/assets/scss/layout/sidebar.scss
+++ b/src/assets/scss/layout/sidebar.scss
@@ -1,22 +1,20 @@
-@import "../variables.scss";
+@import '../variables.scss';
 
 .artist-list {
-    width: 270px;
+    min-width: 270px;
     max-height: 100vh;
     margin-left: -270px;
     z-index: 100;
-    // position: relative;
+    position: fixed;
     box-shadow: 2px 0 30px -10px hsla(0, 0%, 0%, 0.788);
     transition: margin 0.4s linear;
 
+    &--show {
+        margin-left: 0;
+    }
 
     &--loaded {
         background: darken($bg01, 2%);
-
-    }
-
-    &__container {
-        position: fixed;
     }
 
     &__items {
@@ -27,7 +25,6 @@
         min-width: 270px;
         overflow-y: auto;
         overflow-x: hidden;
-
 
         list-style: none;
 
@@ -41,8 +38,12 @@
         }
 
         &::-webkit-scrollbar-thumb {
-            background: linear-gradient(to top, darken($primary, 32%), darken($primary, 20%), darken($primary, 32%));
-            box-shadow: 0 0px 5px 1px hsla(0, 0%, 0%, 0.9) inset, 0 0 15px -5px hsl(0, 0%, 0%) inset;
+            background: linear-gradient(to top,
+                    darken($primary, 32%),
+                    darken($primary, 20%),
+                    darken($primary, 32%));
+            box-shadow: 0 0px 5px 1px hsla(0, 0%, 0%, 0.9) inset,
+                0 0 15px -5px hsl(0, 0%, 0%) inset;
             border-radius: 5px;
         }
 
@@ -51,15 +52,10 @@
             box-shadow: 0 0 7px hsla(0, 0%, 0%, 0.7) inset;
             border-radius: 100px;
         }
-
     }
-
 
     &__item {
         position: relative;
-        // display: flex;
-        // flex-wrap: nowrap;
-        // justify-content: space-between;
         padding-block: 1.3rem;
         padding-left: 20px;
         cursor: pointer;
@@ -75,10 +71,7 @@
             box-shadow: 0 0 10px -2px darken($primary, 20%);
             background-color: darken($bg01, 4%);
         }
-
     }
-
-
 
     &__search {
         padding-block: 10px;
@@ -121,14 +114,12 @@
     }
 }
 
-
 .mark {
     background-color: rgba(darken($primary, 27%), 100%);
     border-radius: 4px;
     box-shadow: 0 0 1px hsla(0, 0%, 23%, 0.425);
     padding: 1px;
 }
-
 
 .artist-not-found {
     text-align: center;
@@ -147,10 +138,21 @@
 
 @media only screen and (min-width: 700px) {
     .artist-list {
+        background: none;
+        position: relative;
         margin-left: 0;
+        min-width: 270px;
         // position: relative;
         opacity: 0;
         transition: opacity 0.3s linear;
+        box-shadow: none;
+
+        &__container {
+            position: fixed;
+            background: darken($bg01, 2%);
+            min-height: 100vh;
+            box-shadow: 2px 0 30px -10px hsla(0, 0%, 0%, 0.788);
+        }
 
         &--loaded {
             margin-left: 0;
@@ -158,7 +160,6 @@
         }
     }
 }
-
 
 @supports (scrollbar-width: auto) {
     .artist-list__items {
