--- a/src/assets/scss/layout/global-layout.scss
+++ b/src/assets/scss/layout/global-layout.scss
@@ -1,10 +1,12 @@
 .App {
     position: relative;
     display: flex;
-    flex-grow: 1;
     min-height: 100vh;
+    flex-direction: row;
+
+
     &::after {
-        background-image: url("https://images.unsplash.com/photo-1613160780608-9d5c8bfa239f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+        background-image: url("https://images.unsplash.com/photo-1574624136404-74cc2f967ba5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
         content: "";
         position: absolute;
         background-size: cover;
@@ -15,10 +17,10 @@
         left: 0;
         width: 100%;
         height: 100%;
-        // filter: grayscale(0.9);
-        // filter: brightness();
+
         z-index: -1;
     }
+
     &::before {
         content: "";
         position: absolute;
@@ -34,17 +36,32 @@
         &::before {
             background-color: hsla(220, 10%, 13%, 0.932);
         }
+
+        &::after {
+            background-image: url("https://images.unsplash.com/photo-1574624136404-74cc2f967ba5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
+
+            filter: grayscale(0.991);
+        }
     }
 }
 
 
 @media only screen and (min-width: 700px) {
-    .App{
-        background-image: url("../../images/concert.jpg");
-        // background-image: url("https://images.unsplash.com/photo-86c411bad78d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-        // background-position: center;
+    .App {
+        background-image: url("https://images.unsplash.com/photo-1564186763535-ebb21ef5277f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
         background-size: cover;
+        background-position: 80%;
         background-repeat: no-repeat;
-        background-attachment: fixed;
+
+        &__data-loaded {
+            &::after {
+                background-image: url("https://images.unsplash.com/photo-1564186763535-ebb21ef5277f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
+
+                filter: grayscale(0.99) !important;
+
+            }
+        }
     }
 }
+
+// TODO pobrac obrazki
