--- a/src/assets/scss/old/artist-list.scss
+++ b/src/assets/scss/old/artist-list.scss
@@ -4,12 +4,14 @@
     width: 270px;
     min-height: 100vh;
     background-image: $bg02;
+    background-attachment: fixed;
     box-shadow: 2px 0 30px -10px hsl(0, 0%, 2%);
     margin-left: -270px;
     flex-shrink: 0;
     transition: margin 0.4s linear;
     position: fixed;
     z-index: 100;
+
     &--show {
         margin-left: 0;
     }
@@ -59,7 +61,7 @@
         border-bottom: 1px lighten($bg01, 9%) inset;
         transition: box-shadow 300ms ease-out, color 200ms linear;
 
-        > span {
+        >span {
             transition: all 0.3s ease-out;
         }
 
@@ -70,6 +72,7 @@
 
         &--loading {
             background-color: darken($bg01, 4%);
+
             &::after {
                 font-family: "icomoon";
                 content: "\e982";
@@ -85,6 +88,7 @@
                 display: inline-block;
             }
         }
+
         &--disabled {
             cursor: not-allowed;
         }
@@ -97,6 +101,7 @@
         position: relative;
         opacity: 0;
         transition: opacity 0.3s linear;
+
         &--loaded {
             margin-left: 0;
             opacity: 1;
@@ -111,7 +116,7 @@
     background: lighten($bg01, 1%);
     box-shadow: 0 2px 7px -2px hsl(0, 0%, 6%);
 
-    > input {
+    >input {
         background: darken($bg01, 2%);
         border: 1px solid lighten($bg01, 2%);
         height: 30px;
@@ -124,6 +129,7 @@
             border: 1px solid lighten($bg01, 10%);
             outline: none;
         }
+
         &::placeholder {
             color: rgba($text-color, 30%);
         }
@@ -136,6 +142,7 @@
     margin-top: 7px;
     transition: color 0.2s linear;
     cursor: pointer;
+
     &:hover {
         color: $secondary;
     }
@@ -153,7 +160,7 @@
     margin-top: 20px;
     text-shadow: 1px 1px 1px hsla(0, 0%, 0%, 0.5);
 
-    > i {
+    >i {
         margin-right: 5px;
         font-size: 2rem;
         vertical-align: bottom;
@@ -166,6 +173,7 @@
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
