--- a/src/assets/scss/UI/loaders.scss
+++ b/src/assets/scss/UI/loaders.scss
@@ -39,7 +39,7 @@
     }
 }
 
-.panel--loader {
+.panel__loader {
     position: fixed;
     transform: translateX(calc(50vw - 50%));
     top: 70px;
