--- a/src/assets/scss/UI/heading.scss
+++ b/src/assets/scss/UI/heading.scss
@@ -1,9 +1,8 @@
 .heading {
-    &--artist__name {
+    &--artists-details {
         font-size: 5rem;
         opacity: 0.85;
-        // padding: 0 50px;
-        margin: 20px 0 0 0;
+        margin: 10px 0 0 0;
         overflow-wrap: break-word;
         hyphens: auto;
         padding-left: 20px;
@@ -12,17 +11,27 @@
             0px 0px 3px rgba(0, 0, 0, 0.2);
     }
 
-    &--section {
+    &--youtube {
         font-size: 3.5rem;
         margin-bottom: 0;
         margin-top: 10px;
+        padding-left: 10px;
+
+        >i {
+            vertical-align: bottom;
+            font-size: 4rem;
+            color: rgba(0, 142, 224, 0.863);
+            margin-right: 7px;
+            text-shadow: 0 3px 3px black;
+
+        }
     }
 }
 
 @media only screen and (min-width: 700px) {
 
     .heading {
-        &--artist__name {
+        &--artists-details {
             padding-left: 0;
         }
     }
