--- a/src/assets/scss/views/artists-view/artist-details.scss
+++ b/src/assets/scss/views/artists-view/artist-details.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 20px;
 
     .wikipedia__link {
         color: $primary;
