--- a/src/assets/scss/UI/divider.scss
+++ b/src/assets/scss/UI/divider.scss
@@ -1,18 +1,21 @@
 .divider {
+    border: 1px ridge rgb(58, 58, 58);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.753), 0 3px 3px rgba(0, 0, 0, 0.788) inset;
+
     &--artists-details {
         margin-top: -7px;
         margin-bottom: 0;
         border-color: #1269c7;
         border-style: groove;
     }
-
-    &--panel,
-    &--youtube {
-        border: 1px ridge rgb(58, 58, 58);
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.753), 0 3px 3px rgba(0, 0, 0, 0.788) inset;
-    }
-
-    &--section {
-        margin-top: -5px;
-    }
 }
+
+// &--panel,
+// &--youtube {
+
+
+
+// &--section {
+//     margin-top: -5px;
+// }
+// }
