--- a/src/assets/scss/views/_index.scss
+++ b/src/assets/scss/views/_index.scss
@@ -1,2 +1,4 @@
 @import "./artists-view/artist-details.scss";
-@import "./artists-view//youtube.scss"
+@import "./artists-view/youtube.scss";
+@import "./artists-view/albums.scss";
+@import "./artists-view/release-panel.scss";
