--- a/src/assets/scss/UI/heading.scss
+++ b/src/assets/scss/UI/heading.scss
@@ -11,7 +11,8 @@
             0px 0px 3px rgba(0, 0, 0, 0.2);
     }
 
-    &--youtube {
+    &--youtube,
+    &--album {
         font-size: 3.5rem;
         margin-bottom: 0;
         margin-top: 10px;
