--- a/src/assets/scss/UI/loaders.scss
+++ b/src/assets/scss/UI/loaders.scss
@@ -25,7 +25,7 @@
     &__icon {
         font-size: 12rem;
         position: fixed;
-        color: hsl(0, 0%, 79%);
+        top: 20px;
         opacity: 0.1;
         margin-top: 10vh;
     }
