--- a/src/assets/scss/layout/sidebar.scss
+++ b/src/assets/scss/layout/sidebar.scss
@@ -18,7 +18,7 @@
     }
 
     &__items {
-        padding: 0;
+        padding: 0 0 30px 0;
         margin-top: 5px;
         margin-bottom: 30px;
         max-height: 100vh;
