--- a/src/assets/scss/views/artists-view/youtube.scss
+++ b/src/assets/scss/views/artists-view/youtube.scss
@@ -1,18 +1,16 @@
 @import '../../variables.scss';
 
 
-.section__youtube {
+.section__youtube,
+.section__album {
     .content {
         padding-top: 20px;
         display: flex;
         gap: 20px;
         overflow-x: scroll;
-        margin-bottom: 50px;
 
         &::-webkit-scrollbar {
-            // width: 3px;
             height: 5px;
-            // cursor: w-resize;
         }
 
         &::-webkit-scrollbar-thumb {
@@ -35,7 +33,7 @@
 .youtube-picture {
     position: relative;
     width: 320px;
-    cursor: pointer;
+
 
     &__image {
         position: relative;
@@ -47,28 +45,19 @@
         box-shadow: 0 2px 20px black;
         opacity: 0;
         border: solid 2px $border02;
+        cursor: pointer;
 
         &--loaded {
             opacity: 1;
-            transition: opacity 0.7s ease;
+            transition: all 0.7s ease;
         }
 
         &:hover {
-            filter: opacity(0.75) saturate(1.5);
-            transition: all 0.2s linear;
+            // opacity: 0.3;
+            border-color: darken($secondary, 30%);
         }
 
-        &::after {
-            content: 'wreer';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            // inset: 0;
-            background: black;
-            z-index: 300;
-        }
+
     }
 
     &__title {
